--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "serve": "json-server __json_server_mock__/db.json --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +45,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.2",
+    "json-server": "^0.17.0",
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1"
   },
